# music-viz

./: .gitignore  CLAUDE.md  README.md  start-py.sh
.claude/: launch.json
backend/: pyproject.toml
backend/musicviz/: __init__.py  __main__.py  config.py
backend/musicviz/api/: __init__.py  scenes.py  server.py
backend/musicviz/pipeline/: __init__.py  engine.py  features.py  ingest.py  separate.py  timeline.py
backend/musicviz/scenes/sdk/: SDK.md  scene-sdk.js  timeline.d.ts
backend/musicviz/scenes/templates/data-inspector/: index.html  manifest.json  scene.js
backend/musicviz/scenes/templates/minimal-canvas/: index.html  manifest.json  scene.js
backend/musicviz/scenes/templates/three-particles/: index.html  manifest.json  scene.js
backend/musicviz/storage/: __init__.py  projects.py  scenes.py  songs.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: FeatureTimeline.jsx  Waveform.jsx
frontend/src/store/: useStore.js
frontend/src/styles/: index.css
frontend/src/views/: FingerprintDetail.jsx  Library.jsx  ProjectHome.jsx  ScenePlayer.jsx
