[project]
name = "musicviz"
version = "0.1.0"
description = "MusicViz fingerprinting and visualization backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "librosa>=0.10.1",
    "soundfile>=0.12",
    "numpy>=1.26",
    "scipy>=1.11",
    "mutagen>=1.47",
    "demucs>=4.0",
    "torch>=2.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["musicviz*"]
